[tool.poetry]
name = "ctua"
version = "0.1.0"
description = ""
authors = ["howard <cht028@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
numpy = "^2.1.2"
tokenizer = "^3.4.5"
torch = "^2.4.1"
tdqm = "^0.0.1"
transformers = "^4.45.2"
datasets = "^3.0.1"
beautifulsoup4 = "^4.12.3"
wandb = "^0.18.3"
hydra-core = "^1.3.2"
tensor-parallel = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
